--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,19 +26,7 @@
                 <li>"So fast it's almost like traveling in time." (4/5)</li>
                 <li>"Coolest ride on the road." (4/5)</li>
                 <li>"I'm feeling McFly!" (5/5)</li>
-                <li>"The most futuristic ride of our day." (4.5/5)</li>
-                <li>"80's livin and I love it!" (5/5)</li>
-            </ul>
-        </section>
-        <section class="upgrades">
-            <h2>Delorean Upgrades</h2>
-            <div class="upgrade-grid">
-                <div class="upgrade-item">
-                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-                    <a href="#">Flux Capacitor</a>
-                </div>
-                <div class="upgrade-item">
-                    <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
+                <mg src="/images/upgrades/flame.jpg" alt="Flame Decals">
                     <a href="#">Flame Decals</a>
                 </div>
                 <div class="upgrade-item">
@@ -54,4 +42,16 @@
     </main>
     <%- include('partials/footer') %>
 </body>
-</html>
+</html>li>"The most futuristic ride of our day." (4.5/5)</li>
+                <li>"80's livin and I love it!" (5/5)</li>
+            </ul>
+        </section>
+        <section class="upgrades">
+            <h2>Delorean Upgrades</h2>
+            <div class="upgrade-grid">
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                    <a href="#">Flux Capacitor</a>
+                </div>
+                <div class="upgrade-item">
+                    <i
