--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,6 @@
 <body>
     <%- include('partials/header') %>
     <%- include('partials/navigation') %>
-    
     <main>
         <h1>Welcome to CSE Motors!</h1>
         <section class="hero">
@@ -26,7 +25,20 @@
                 <li>"So fast it's almost like traveling in time." (4/5)</li>
                 <li>"Coolest ride on the road." (4/5)</li>
                 <li>"I'm feeling McFly!" (5/5)</li>
-                <mg src="/images/upgrades/flame.jpg" alt="Flame Decals">
+                <li>"The most futuristic ride of our day." (4.5/5)</li>
+                <li>"80's livin and I love it!" (5/5)</li>
+            </ul>
+        </section>
+
+        <section class="upgrades">
+            <h2>Delorean Upgrades</h2>
+            <div class="upgrade-grid">
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                    <a href="#">Flux Capacitor</a>
+                </div>
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
                     <a href="#">Flame Decals</a>
                 </div>
                 <div class="upgrade-item">
@@ -41,17 +53,6 @@
         </section>
     </main>
     <%- include('partials/footer') %>
+    <script src="/js/script.js"></script>
 </body>
-</html>li>"The most futuristic ride of our day." (4.5/5)</li>
-                <li>"80's livin and I love it!" (5/5)</li>
-            </ul>
-        </section>
-        <section class="upgrades">
-            <h2>Delorean Upgrades</h2>
-            <div class="upgrade-grid">
-                <div class="upgrade-item">
-                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-                    <a href="#">Flux Capacitor</a>
-                </div>
-                <div class="upgrade-item">
-                    <i
+</html>
