--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<% const d = new Date()
-let year = d.getFullYear() %>
+<% const d = new Date() %>
 <footer>
-  <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+  <p class="copyright">&copy; <%= d.getFullYear() %>, CSE 340 App</p>
+  <p><a href="/trigger-error" title="Test 500 Error">Test 500 Error</a></p>
 </footer>
