--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     <%- include('partials/navigation') %>
     <main>
         <h1>Welcome to CSE Motors!</h1>
+
+        <%- messages %>
+        
         <section class="hero">
             <div class="hero-content">
                 <div class="car-details">
